# django-webix

./: .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  TODO.txt  locale.sh  pyproject.toml  requirements_dev.txt  runtests.py  setup.cfg  setup.py  tox.ini
django_webix/: __init__.py  apps.py  forms.py  formsets.py  middleware.py  models.py  urls.py  utils.py  views.py  views_autocomplete.py
django_webix/admin_webix/: __init__.py  admin.py  admin_webix.py  apps.py  decorators.py  django_admin_utils.py  forms.py  models.py  options.py  sites.py  views.py
django_webix/admin_webix/migrations/: 0001_initial.py  0005_auto_20210621_1728.py
django_webix/admin_webix/templatetags/: django_webix_admin_utils.py
django_webix/auth_webix/: forms.py  urls.py  views.py
django_webix/contrib/admin/: __init__.py  admin.py  admin_webix.py  apps.py  decorators.py  django_admin_utils.py  dwadmin.py  forms.py  models.py  options.py  sites.py  views.py
django_webix/contrib/auth/: __init__.py  apps.py  forms.py  urls.py  views.py
django_webix/contrib/commands_manager/: __init__.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py  views_js.py
django_webix/contrib/extra_fields/: __init__.py  apps.py  dwadmin.py  dwadmin_inline_utils.py  fields.py  forms.py  managers.py  models.py  models_mixin.py  signals.py  urls.py  utils_cache.py  views.py
django_webix/contrib/filter/: __init__.py  admin.py  apps.py  enums.py  forms.py  managers.py  models.py  urls.py  views.py
django_webix/filters/: defaults.py
django_webix/forms/: __init__.py  forms.py  formsets.py  formsets_generic.py
django_webix/templatetags/: django_webix_utils.py  utils_getattr.py
django_webix/utils/: annotations.py  decorators.py  filters.py  layers.py
django_webix/views/: __init__.py  views_autocomplete.py  views_user_agent_limit.py
docs/: actions.rst  admin_configuration.rst  admin_model.rst  admin_site.rst  admin_use_base.rst  advanced.rst  class-reference.rst  conf.py  configuration.rst  configurations.rst  django_webix.rst  django_webix.templatetags.rst  forms.rst  index.rst  modules.rst  usage.rst  usage_admin.rst  usage_views.rst  views.rst
docs/ref/: configuration.rst  forms.rst  urls.rst  views.rst
tests/: __init__.py  settings.py  test_base.py  tests_adminwebix.py  tests_base.py  tests_createview.py  tests_deleteview.py  tests_detailview.py  tests_listview.py  tests_permissions.py  tests_settings.py  tests_updateview.py  tests_urls.py_  urls.py
tests/app_name/: __init__.py  admin_webix.py  apps.py  context_params.py  forms.py  models.py  views.py  views_urls.py
(+387 files in other folders)
