[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base"
version = "25.7.0"
description = ""
authors = [
    {name = "MPA Solutions soc coop, Enogis srl", email = "info@mpasol.it"},
]
license = {text = "GNU GPLv3 License"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django>=5.2,<6.0",
    "django-extra-views==0.16.0",
    "six==1.17.0",
    "django-user-agents==0.4.0",
    "python-dateutil==2.9.0.post0",
    "sorl-thumbnail==12.11.0",
    "pillow==11.3.0",
    "django-two-factor-auth==1.18.1",
    "django-modeltranslation==0.19.17",
    "django-hijack==3.7.4",
    "django-mptt==0.18.0",
    "celery==5.5.3",
    "requests==2.32.5",
    "amqp==5.3.1",
    "billiard==4.2.2",
    "kombu==5.5.4",
    "vine==5.1.0",
    "phonenumbers==9.0.15",
    "python-telegram-bot==22.5",
    "python-magic==0.4.27",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "geopandas==1.1.1",
    "xlrd==2.0.2",
]
# Develop dependencies (optional)
[project.optional-dependencies]
dev = [
]

[project.urls]
Homepage = "https://github.com/MPASolutions/django-webix"

[tool.setuptools]
include-package-data = true
packages = ["mpaadmin", "mpadjango", "mpamonitor", "mpaoauth", "mpautils", "users"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.isort]
profile = "black"
combine_as_imports = true
include_trailing_comma = true
line_length = 119
src_paths = ["django-webix" ]

[tool.black]
line-length = 119
skip-magic-trailing-comma = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
extend-ignore = ["E203", "W503", "W504"]
max-line-length = 119
exclude = [".git", "__pycache__"]
# max-complexity = 15

# [tool.pytest.ini_options]
# DJANGO_SETTINGS_MODULE = "prjcore.settings"
# python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
# filterwarnings = [
#     "error",
#     "ignore::DeprecationWarning:",
#     "ignore::django.utils.deprecation.RemovedInDjango60Warning",
#     "ignore::cryptography.utils.CryptographyDeprecationWarning",
# ]
